Fix nav bar option selection area overflow

--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ body.dark-mode {
     > .nav-option-label {
         transition: .1s;
         transform: rotate(-3deg) scale(1.1);
+        pointer-events: none;
     }
 }
 
